[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "humanoid_bench"
version = "0.2.0"
description = "Humanoid Benchmark"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "RLL at UC Berkeley"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "gymnasium>=0.29.1",
    "rich>=13.7.1",
    "tqdm>=4.66.4",
    "ipdb>=0.13.13",
    "mujoco>=3.1.6",
    "mujoco-mjx>=3.1.6",
    "dm_control>=1.0.20",
    "imageio>=2.34.2",
    "gymnax>=0.0.8",
    "brax>=0.9.4",
    "torch>=2.3.1",
    "opencv-python>=4.10.0.84",
    "natsort>=8.4.0",
]

[project.urls]
Homepage = "https://github.com/carlosferrazza/humanoid-bench"
Repository = "https://github.com/carlosferrazza/humanoid-bench"
Issues = "https://github.com/carlosferrazza/humanoid-bench/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["humanoid_bench*"]
exclude = ["test*", "tests*"]

[tool.setuptools.package-data]
humanoid_bench = [
    "assets/**/*",
    "**/*.xml",
    "**/*.mjcf",
    "**/*.stl",
    "**/*.obj",
    "**/*.mtl",
    "**/*.png",
    "**/*.jpg",
    "**/*.jpeg",
    "**/*.urdf",
    "**/*.mesh",
    "**/*.dae",
    "**/*.txt",
    "**/*.yaml",
    "**/*.json",
] 